app/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
