app/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  dplwebappv2
  namespace: webapp
  labels:
    app:  webapp1
    rakam: v2
spec:
  selector:
    matchLabels:
      app: webapp1
      rakam: v2

  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp1
        rakam: v2
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.6
        ports:
        - containerPort:  80
