app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1service
#  labels:
#    app:  webapp1
  namespace: webapp
spec:
  selector:
    rakam: v1
  type: ClusterIP
  ports:
  - name: webapp
    protocol: TCP
    port: 9090
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
