app/d2svc.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: firstvs
  namespace: webapp
spec:
  hosts:
  - '*'
  gateways:
  - webapp1gateway
  http:
  - route:
    - destination:
        host: webapp1service.webapp.svc.cluster.local
      weight: 50
    - destination:
        host: webapp2service.webapp.svc.cluster.local
      weight: 50
