app/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webapp-destination-rule
  namespace: webapp
spec:
  host: webapp1service.webapp.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: webapp-subset1
    labels:
      rakam: v1
  - name: webapp-subset2
    labels:
      rakam: v2
