app/virtualservic.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: firstvs
  namespace: webapp
spec:
  hosts:
  - '*'
  gateways:
  - webapp1gateway
  http:
  - route:
    - destination:
        host: webapp1service.webapp.svc.cluster.local
        subset: webapp-subset1
        port:
          number: 9090
      weight: 100
    - destination:
        host: webapp1service.webapp.svc.cluster.local
        subset: webapp-subset2
        port:
          number: 9090
      weight: 0
